--- a/index.html
+++ b/index.html
@@ -2,20 +2,39 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 1</title>
-    <link rel="shortcut icon" href="./imagens/gengar.png" type="image/x-icon">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aula 1</title>
+  <link rel="shortcut icon" href="./imagens/gengar.png" type="image/x-icon" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <h1>Hello World!</h1>
-    <h2>Título 2</h2>
-    <h3>Título 3</h3>
-    <h4>Título 4</h4>
-    <h5>Título 5</h5>
-    <h6>Título 6</h6>
-    <p>Parágrafo</p>
+  <!-- Baixar Live Server, HTML Preview e ativar auto save -->
+  <h1 class="Hello">Hello World!</h1>
+  <!-- TAG "P" utilizada para parágrafos -->
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos dolores
+    sequi totam rem quibusdam. Pariatur laudantium repellat ipsa esse commodi
+    a nihil modi! Deleniti dolorum nostrum nisi recusandae praesentium
+    exercitationem?
+  </p>
+  <button>
+    <a href="https://salesianossp.org.br/ositaquera/?playlist=21c62af&video=09131b6" target="_blank">Obra Social Dom Bosco</a>
+  </button>
+  <img src="./imagens/pexels-dzeninalukac-1583884.jpg" width="100px" alt="Imagem de batata frita">
+
+  <hr>
+
+  <h2>Titulo 2</h2>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo vitae ipsam
+    non suscipit dignissimos provident amet consequatur quaerat deleniti esse
+    debitis repellendus enim quibusdam aspernatur iusto, pariatur omnis.
+    Molestias, velit!
+  </p>
+  <a href="https://google.com" target="_blank">Google</a>
+  <img src="./imagens/pexels-eva-bronzini-5988689.jpg" width="100px" alt="Imagem de pimentas do reino">
+
 </body>
 
 </html>
