--- a/index.html
+++ b/index.html
@@ -2,26 +2,27 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aula 1</title>
-  <link rel="shortcut icon" href="./imagens/gengar.png" type="image/x-icon" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" href="./imagens/gengar.png" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <!-- Baixar Live Server, HTML Preview e ativar auto save -->
-  <h1 class="Hello">Hello World!</h1>
+  <h1 class="helo">Helo World!</h1>
   <!-- TAG "P" utilizada para parágrafos -->
   <p>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos dolores
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit.Quos dolores
     sequi totam rem quibusdam. Pariatur laudantium repellat ipsa esse commodi
-    a nihil modi! Deleniti dolorum nostrum nisi recusandae praesentium
-    exercitationem?
+    a nihil modi!dolorum nostrum nisi recusandae praesentium exercitationem?
   </p>
-  <button>
-    <a href="https://salesianossp.org.br/ositaquera/?playlist=21c62af&video=09131b6" target="_blank">Obra Social Dom Bosco</a>
-  </button>
+
+  <a href="https://salesianossp.org.br/ositaquera/?playlist=21c62af&video=09131b6" target="_blank">
+    <button>A COM B</button>
+  </a>
+  <br>
+  <br>
   <img src="./imagens/pexels-dzeninalukac-1583884.jpg" width="100px" alt="Imagem de batata frita">
 
   <hr>
@@ -34,7 +35,9 @@
   </p>
   <a href="https://google.com" target="_blank">Google</a>
   <img src="./imagens/pexels-eva-bronzini-5988689.jpg" width="100px" alt="Imagem de pimentas do reino">
-
+  <br>
+  <br>
+  <a href="./segundaTela.html">*Tela 2*</a>
 </body>
 
 </html>
