--- a/index.html
+++ b/index.html
@@ -19,25 +19,27 @@
   </p>
 
   <a href="https://salesianossp.org.br/ositaquera/?playlist=21c62af&video=09131b6" target="_blank">
-    <button>A COM B</button>
+    <button>Obra Social Dom Bosco</button>
   </a>
-  <br>
-  <br>
   <img src="./imagens/pexels-dzeninalukac-1583884.jpg" width="100px" alt="Imagem de batata frita">
 
   <hr>
 
   <h2>Titulo 2</h2>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo vitae ipsam
-    non suscipit dignissimos provident amet consequatur quaerat deleniti esse
+
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. 
+    Nemo vitae ipsam non suscipit dignissimos provident amet consequatur quaerat deleniti esse
     debitis repellendus enim quibusdam aspernatur iusto, pariatur omnis.
     Molestias, velit!
   </p>
+
   <a href="https://google.com" target="_blank">Google</a>
+
   <img src="./imagens/pexels-eva-bronzini-5988689.jpg" width="100px" alt="Imagem de pimentas do reino">
-  <br>
-  <br>
-  <a href="./segundaTela.html">*Tela 2*</a>
+
+  <a href="./segundaTela.html"><button>*Tela 2*</button></a>
+
 </body>
 
 </html>
